--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.5</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -113,8 +116,8 @@
                         </goals>
                         <configuration>
                             <sourceDirs>
-                                <source>src/test/kotlin</source>
-                                <source>src/test/test-resources</source>
+                                <source>src/main/kotlin</source>
+                                <source>src/main/test-resources</source>
                             </sourceDirs>
                         </configuration>
                     </execution>
