--- a/hostchecker.backend.yaml
+++ b/hostchecker.backend.yaml
@@ -3,13 +3,13 @@ apiVersion: v1
 metadata:
   name: hostchecker-backend-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: hostchecker-backend
   ports:
     - protocol: TCP
       port: 8080
-      nodePort: 8081
+      targetPort: 8081
 
 ---
 
