--- a/hostchecker.backend.yaml
+++ b/hostchecker.backend.yaml
@@ -13,7 +13,7 @@ spec:
 
 ---
 
-apiVersion: extensions/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: hostchecker-backend-deployment
