--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "out/index.js",
   "scripts": {
     "test": "tsc && node out/test.js",
-    "compile": "tsc"
+    "dev": "tsc && node out/index.test.js",
+    "build": "tsc"
   },
   "author": "Sergei Orlov",
   "license": "MIT",
